Main | Initial template

--- a/app/l10n/en.json
+++ b/app/l10n/en.json
@@ -1,4 +1,9 @@
 {
 "title" : "atte",
-"header" : "angular-translate translations editor"
+"main" : {
+  "header" : "atte",
+  "subheader" : "angular-translate translations editor",
+  "create" : "Create",
+  "modify" : "Modify"
+}
 }
